MPMProject/bin/Release/netcoreapp2.2/publish/portal-mw-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-mw-web
  labels:
    app: portal-mw-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-mw-web
  template:
    metadata:
      labels:
        app: portal-mw-web
    spec:   
      containers:
      - name: portal-mw-web
        image: harbor.arfa.wise-paas.com/sunsx/portal-metalwork-web:v0.0.1
        resources:
          limits:
            memory: "200Mi"
            cpu: "100m"
            ephemeral-storage: "512Mi"
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
          name: "portal-mw-web"
