MPMProject/bin/Release/netcoreapp2.2/publish/portal-mw-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-mw-web
spec:
  selector:
    app: portal-mw-web
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
